--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <button class="btn next">Next</button>
       </div>
       <div class="end-screen hide">
-        <h1 class="heading">Quiz App</h1>
+        <h1 class="heading">QuizArena</h1>
         <div class="score">
           <span class="score-text">Your score:</span>
           <div>
